// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. scaled medium full article 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <View
          style={
            Object {
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 17,
                "lineHeight": 26,
                "marginBottom": 20,
              }
            }
          >
            Some content
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          <ArticleTopics />
        </View>
      </View>
      <View>
        <RelatedArticles />
      </View>
      <View>
        <ArticleComments />
      </View>
    </View>
  </RCTScrollView>
</Ad>
`;

exports[`2. scaled large full article 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <View
          style={
            Object {
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 21,
                "lineHeight": 31,
                "marginBottom": 20,
              }
            }
          >
            Some content
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          <ArticleTopics />
        </View>
      </View>
      <View>
        <RelatedArticles />
      </View>
      <View>
        <ArticleComments />
      </View>
    </View>
  </RCTScrollView>
</Ad>
`;

exports[`3. scaled xlarge full article 1`] = `
<Ad>
  <RCTScrollView>
    <View>
      <View />
      <View>
        <View
          style={
            Object {
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 23,
                "lineHeight": 33,
                "marginBottom": 20,
              }
            }
          >
            Some content
          </Text>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "marginLeft": 10,
              "marginRight": 10,
            }
          }
        >
          <ArticleTopics />
        </View>
      </View>
      <View>
        <RelatedArticles />
      </View>
      <View>
        <ArticleComments />
      </View>
    </View>
  </RCTScrollView>
</Ad>
`;
